--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,7 +11,7 @@
 				"-g",
 				"${file}",
 				"-o",
-				"${fileDirname}/${fileBasenameNoExtension}.out"
+				"bin/${fileBasenameNoExtension}.out"
 			],
 			"options": {
 				"cwd": "${workspaceFolder}"
